<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MoreFragment"
>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        >
        <ImageView
            android:layout_margin="15dp"
            android:id="@+id/logoImageViewM"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/logo_e_bg"
            android:contentDescription="@string/logo_alinha_ImgD"/>

        <!-- Texto Sobre nós  -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            >
            <LinearLayout
                android:id="@+id/SobreNos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingBottom="20dp"
                android:paddingHorizontal="20dp"
                >
                <!-- Titulo Sobre Nós -->
                <TextView
                    android:id="@+id/SobreBold"
                    style="@style/TextBold"
                    android:layout_marginVertical="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Sobre_Bold"
                    android:gravity="center"/>

                <!-- Texto Sobre Nos-->
                <TextView
                    android:id="@+id/SobreMedium"
                    style="@style/TextRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_sobre"
                    android:gravity="start"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <!-- Contatos e Redes Sociais-->
        <Button
            android:id="@+id/contatosBtn"
            style="@style/ButtonColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Contatos_Btn"
            android:textColor="@color/white"
            android:backgroundTint="@color/primariaEscuro"
            android:layout_marginTop="10dp"/>

        <!-- Redes Sociais -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <!-- Titulo Redes Sociais-->
                <TextView
                    style="@style/TextBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Redes_Bold"/>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <!-- Linkedin -->
                    <ImageButton
                        android:id="@+id/linkedinImgBtn"
                        style="@style/Small_ImageView"
                        android:background="@drawable/linkedin"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/botao_linkedin_ImgD"/>

                    <!-- Instagram -->
                    <ImageButton
                        android:id="@+id/instagramImgBtn"
                        style="@style/Small_ImageView"
                        android:background="@drawable/instagram"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/botao_instagram_ImgD"/>

                    <!-- Youtube-->
                    <ImageButton
                        android:id="@+id/youtubeImgBtn"
                        style="@style/Small_ImageView"
                        android:background="@drawable/youtube"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/botao_youtube_ImgD"/>

                    <!-- Site -->
                    <ImageButton
                        android:id="@+id/siteImgBtn"
                        style="@style/Small_ImageView"
                        android:layout_margin="10dp"
                        android:background="@drawable/site"
                        android:backgroundTint="@color/bw"
                        android:contentDescription="@string/botao_website_ImgD"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <!--Logo -->




</ScrollView>